--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@table-library/react-table-library": "^4.1.7",
     "@types/lodash": "^4.14.202",
-    "@types/react-custom-scrollbars": "^4.0.13",
     "@types/react-datepicker": "^4.19.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-logger": "^3.0.13",
@@ -22,16 +21,17 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "formik": "^2.4.5",
     "react": "^18.2.0",
-    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-jss": "^10.10.0",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.3.0",
+    "react-slick": "^0.30.3",
     "react-table": "^7.8.0",
     "react-transition-group": "^4.4.2",
     "redux-logger": "^3.0.6",
     "regenerator-runtime": "^0.14.1",
+    "slick-carousel": "^1.8.1",
     "vite-plugin-svgr": "^4.2.0",
     "yup": "^1.3.3"
   },
