--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-slick": "^0.30.3",
     "react-table": "^7.8.0",
     "react-transition-group": "^4.4.2",
+    "react-youtube": "^10.1.0",
     "redux-logger": "^3.0.6",
     "regenerator-runtime": "^0.14.1",
     "slick-carousel": "^1.8.1",
